--- a/client/src/app/subjects/subjects.component.html
+++ b/client/src/app/subjects/subjects.component.html
@@ -1,45 +1,48 @@
 <div class="container mt-5 pt-5" style="max-width: 1000px">
-    <div class="row align-items-center">
-        <div class="col text-start">
-            <h4 class="mb-0">Subjects</h4>
-        </div>
-        <div class="col text-end">
-            <a routerLink="/add-loan">Add new Subject!</a>
-        </div>
-    </div>
-    <hr class="mb-4">
-    <div class="alert alert-danger text-center small" role="alert" *ngIf="true">
-        error message
-    </div>
-    <div class="text-center" *ngIf="false">
-        <span class="spinner-border"></span>
-    </div>
-
-    <ul class="list-group">
-        <li class="list-group-item p-3">
-            <div class="row">
-                <div class="col-md text-start">Subject I. [4]</div>
-                <div class="col-md text-end">
-                    <a href="#">Edit subject</a> | <a href="#">Add Course</a>
+    <ul class="list-group shadow">
+        <li class="list-group-item p-4">
+            <div class="row align-items-center">
+                <div class="col text-start">
+                    <h4 class="mb-0">Subjects</h4>
+                </div>
+                <div class="col text-end">
+                    <a class="btn btn-primary" routerLink="/add-subject">Add Subject!</a>
                 </div>
             </div>
         </li>
-        <li class="list-group-item p-3">
-            <div class="row">
-                <div class="col-md text-start">Subject II. [3]</div>
-                <div class="col-md text-end">
-                    <a href="#">Edit subject</a> | <a href="#">Add Course</a>
-                </div>
+        <li class="list-group-item p-4">
+            <div class="alert alert-danger text-center small" role="alert" *ngIf="false">
+                error message
             </div>
-        </li>
-        <li class="list-group-item p-3">
-            <div class="row">
-                <div class="col-md text-start">Subject III. [2]</div>
-                <div class="col-md text-end">
-                    <a href="#">Edit subject</a> | <a href="#">Add Course</a>
-                </div>
+            <div class="text-center" *ngIf="false">
+                <span class="spinner-border"></span>
             </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-md text-start">Subject I. [4]</div>
+                        <div class="col-md text-end">
+                            <a href="#">Edit subject</a> | <a href="#">Add Course</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-md text-start">Subject II. [3]</div>
+                        <div class="col-md text-end">
+                            <a href="#">Edit subject</a> | <a href="#">Add Course</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-md text-start">Subject III. [2]</div>
+                        <div class="col-md text-end">
+                            <a href="#">Edit subject</a> | <a href="#">Add Course</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </li>
     </ul>
-
 </div>
