--- a/client/src/app/subjects/subjects.component.html
+++ b/client/src/app/subjects/subjects.component.html
@@ -6,7 +6,7 @@
                     <h5 class="mb-0">Subjects</h5>
                 </div>
                 <div class="col text-end">
-                    <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addSubjectModal">Add Subject!</a>
+                    <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Subject!</a>
                 </div>
             </div>
         </li>
@@ -47,9 +47,9 @@
     </ul>
 </div>
 
-
-<div class="modal fade" id="addSubjectModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog">
+<!-- Add modal -->
+<div class="modal fade" id="addModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Adding Subject</h5>
