--- a/client/src/app/subjects/subjects.component.html
+++ b/client/src/app/subjects/subjects.component.html
@@ -72,3 +72,29 @@
         </div>
     </div>
 </div>
+
+<!-- Edit modal -->
+<div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Editing Subject</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="mb-3">
+                    <label class="form-label">Title</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="mb-4">
+                    <label class="form-label">Credits</label>
+                    <input type="number" class="form-control">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Update!</button>
+            </div>
+        </div>
+    </div>
+</div>
