--- a/client/src/app/subjects/subjects.component.html
+++ b/client/src/app/subjects/subjects.component.html
@@ -3,10 +3,16 @@
         <li class="list-group-item p-4">
             <div class="row align-items-center">
                 <div class="col text-start">
-                    <h5 class="mb-0">Subjects</h5>
+                    <h5 class="mb-0">
+                        Subjects
+                        <span class="spinner-border spinner-border-sm" *ngIf="this.loading"></span>
+                    </h5>
                 </div>
                 <div class="col text-end">
-                    <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Subject!</a>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal" (click)="this.reset()" *ngIf="!this.loading">Add Subject!</button>
+                    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal" disabled *ngIf="this.loading">
+                        Add Subject!
+                    </button>
                 </div>
             </div>
         </li>
@@ -18,27 +24,11 @@
                 <span class="spinner-border"></span>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">
+                <li class="list-group-item" *ngFor="let subject of this.subjects">
                     <div class="row">
-                        <div class="col-md text-start">Subject I. [4]</div>
+                        <div class="col-md text-start">{{ subject.title }} [{{ subject.credits }}]</div>
                         <div class="col-md text-end">
-                            <a href="#">Edit Subject</a> | <a routerLink="/subjects/some_id">Courses</a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-md text-start">Subject II. [3]</div>
-                        <div class="col-md text-end">
-                            <a href="#">Edit Subject</a> | <a routerLink="/subjects/some_id">Courses</a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-md text-start">Subject III. [2]</div>
-                        <div class="col-md text-end">
-                            <a href="#">Edit Subject</a> | <a routerLink="/subjects/some_id">Courses</a>
+                            <a class="btn btn-link p-0" data-bs-toggle="modal" data-bs-target="#editModal" (click)="this.subjectToBeEdited = subject.copy()">Edit Subject</a> | <a class="btn btn-link p-0" [routerLink]="['/subjects', subject.id]">Courses</a>
                         </div>
                     </div>
                 </li>
@@ -57,17 +47,21 @@
             </div>
             <div class="modal-body">
                 <div class="mb-3">
+                    <label class="form-label text-danger">id (only for testing)</label>
+                    <input type="text" class="form-control" [(ngModel)]="this.subjectToBeAdded.id">
+                </div>
+                <div class="mb-3">
                     <label class="form-label">Title</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" [(ngModel)]="this.subjectToBeAdded.title">
                 </div>
                 <div class="mb-4">
                     <label class="form-label">Credits</label>
-                    <input type="number" class="form-control">
+                    <input type="number" class="form-control" [(ngModel)]="this.subjectToBeAdded.credits">
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Add!</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="this.addSubject()">Add!</button>
             </div>
         </div>
     </div>
@@ -83,17 +77,21 @@
             </div>
             <div class="modal-body">
                 <div class="mb-3">
+                    <label class="form-label text-danger">id (only for testing)</label>
+                    <input type="text" class="form-control" [(ngModel)]="this.subjectToBeEdited.id">
+                </div>
+                <div class="mb-3">
                     <label class="form-label">Title</label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" [(ngModel)]="this.subjectToBeEdited.title">
                 </div>
                 <div class="mb-4">
                     <label class="form-label">Credits</label>
-                    <input type="number" class="form-control">
+                    <input type="number" class="form-control" [(ngModel)]="this.subjectToBeEdited.credits">
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Update!</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="this.updateSubject()">Update!</button>
             </div>
         </div>
     </div>
