Add POST feature

--- a/client/src/app/courses/courses.component.html
+++ b/client/src/app/courses/courses.component.html
@@ -27,7 +27,7 @@
                             <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#addAllModal">Add all</button>
                         </li>
                         <li>
-                            <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#addOneModal">Add one</button>
+                            <button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#addOneModal" (click)="this.reset()">Add one</button>
                         </li>
                     </ul>
                 </div>
